--- a/app/src/main/res/drawable/btn_sign_in.xml
+++ b/app/src/main/res/drawable/btn_sign_in.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ripple xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:color="@color/ripple"
+    android:color="#5f7594"
     tools:targetApi="lollipop">
 
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="@color/colorAccent"></solid>
+            <solid android:color="#fff"></solid>
             <stroke android:color="@color/text_bottom"></stroke>
             <corners android:radius="30dp" />
         </shape>
