--- a/app/src/main/res/layout/activity_note.xml
+++ b/app/src/main/res/layout/activity_note.xml
@@ -10,39 +10,39 @@
 
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
+        android:weightSum="2"
         android:layout_marginTop="25dp"
-        android:gravity="center"
-        android:orientation="vertical">
+        android:layout_margin="15dp"
+        android:orientation="horizontal">
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/pacifico_regular"
-            android:text="@string/app_name"
-            android:layout_marginTop="80dp"
-            android:textAlignment="center"
-            android:textColor="@android:color/white"
-            android:textSize="40sp" />
-        <TextView
             android:id="@+id/text"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginRight="8dp"
+            android:layout_marginLeft="4dp"
+            android:layout_weight="1"
             android:fontFamily="@font/pacifico_regular"
             android:text="@string/app_name"
-            android:layout_marginTop="80dp"
             android:textAlignment="center"
             android:textColor="@android:color/white"
             android:textSize="20sp" />
 
         <Button
             android:id="@+id/button"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="Button" />
+            android:layout_marginRight="8dp"
+            android:layout_marginLeft="4dp"
+            android:layout_weight="1"
+            android:text="Выход"
+            android:textColor="@android:color/white"/>
 
     </LinearLayout>
+
+
+
 
 </RelativeLayout>
