--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#70c967</color>
     <color name="text_bottom">#c9c9c9</color>
     <color name="ripple">#457040</color>
+    <color name="mutGrey">#33AAAAAA</color>
 </resources>
