--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#70c967</color>
+    <color name="colorPrimary">#082654</color>
+    <color name="colorPrimaryDark">#082654</color>
+    <color name="colorAccent">#2a4f87</color>
     <color name="text_bottom">#c9c9c9</color>
     <color name="ripple">#457040</color>
     <color name="mutGrey">#33AAAAAA</color>
